--- a/assets/css/document.css
+++ b/assets/css/document.css
@@ -18,6 +18,30 @@ h2 {
   border-bottom: solid 1px #e79655;
   font-size: 16px; }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 6vh;
+  background-color: white; }
+  header a {
+    margin-top: auto;
+    margin-bottom: auto; }
+  header a img {
+    max-height: 30px;
+    max-width: 300px;
+    align-self: center; }
+  header button {
+    background: none;
+    border: none; }
+  header div {
+    align-self: center; }
+    header div :first-child {
+      white-space: pre-line; }
+    header div .year {
+      font-size: 35px;
+      font-weight: bold;
+      color: #e79655; }
+
 .subcategory__1 .subtitle {
   margin: 0;
   margin-left: 5px;
@@ -84,7 +108,8 @@ h2 {
   .drop-menu .checkbox_toggler:checked ~ label .polygone {
     opacity: 1; }
   .drop-menu .checkbox_toggler:checked ~ label .chevron-down {
-    transform: rotate(90deg); }
+    transform: rotate(90deg);
+    transform-origin: 80% 50%; }
   .drop-menu .checkbox_toggler:checked ~ label .arrow {
     display: block;
     position: absolute;
@@ -126,7 +151,6 @@ h2 {
   left: 0.15em;
   position: relative;
   top: 0.15em;
-  transform: rotate(-45deg);
   vertical-align: top;
   width: 0.45em;
   left: 0;
@@ -135,6 +159,10 @@ h2 {
 .chevron.bottom:before {
   top: 0;
   transform: rotate(135deg); }
+
+.arrow-down {
+  transform: rotate(90deg);
+  transform-origin: 80% 50%; }
 
 .subcategory__2 .ad {
   display: flex;
@@ -176,38 +204,26 @@ h2 {
 button, label {
   cursor: pointer; }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  height: 6vh;
-  background-color: white; }
-  header img {
-    max-height: 30px;
-    max-width: 300px;
-    align-self: center; }
-  header button {
-    background: none;
-    border: none; }
-  header div {
-    align-self: center; }
-    header div :first-child {
-      white-space: pre-line; }
-    header div .year {
-      font-size: 35px;
-      font-weight: bold; }
-
 @media screen and (max-width: 600px) {
   .show_on_mobile {
     display: block; }
 
   .show_on_desktop {
-    display: none; } }
+    display: none; }
+
+  header div {
+    margin-right: 5px; } }
 @media screen and (min-width: 600px) {
   .show_on_mobile {
     display: none; }
 
   .show_on_desktop {
-    display: block; } }
+    display: block; }
+
+  header img {
+    margin-left: 10px; }
+  header div {
+    margin: 5px; } }
 @media screen and (max-width: 700px) {
   header {
     padding-top: 5px; }
