--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,36 +1,877 @@
+/*! normalize.css v6.0.0 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */ }
+
+/* Sections
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+article,
+aside,
+footer,
+header,
+nav,
+section {
+  display: block; }
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0; }
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in IE.
+ */
+figcaption,
+figure,
+main {
+  /* 1 */
+  display: block; }
+
+/**
+ * Add the correct margin in IE 8.
+ */
+figure {
+  margin: 1em 40px; }
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */ }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+ */
+a {
+  background-color: transparent;
+  /* 1 */
+  -webkit-text-decoration-skip: objects;
+  /* 2 */ }
+
+/**
+ * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */ }
+
+/**
+ * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+ */
+b,
+strong {
+  font-weight: inherit; }
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder; }
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */ }
+
+/**
+ * Add the correct font style in Android 4.3-.
+ */
+dfn {
+  font-style: italic; }
+
+/**
+ * Add the correct background and color in IE 9-.
+ */
+mark {
+  background-color: #ff0;
+  color: #000; }
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%; }
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
+
+sub {
+  bottom: -0.25em; }
+
+sup {
+  top: -0.5em; }
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+audio,
+video {
+  display: inline-block; }
+
+/**
+ * Add the correct display in iOS 4-7.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0; }
+
+/**
+ * Remove the border on images inside links in IE 10-.
+ */
+img {
+  border-style: none; }
+
+/**
+ * Hide the overflow in IE.
+ */
+svg:not(:root) {
+  overflow: hidden; }
+
+/* Forms
+   ========================================================================== */
+/**
+ * Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  margin: 0; }
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible; }
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none; }
+
+/**
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+  /* 2 */ }
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0; }
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText; }
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */ }
+
+/**
+ * 1. Add the correct display in IE 9-.
+ * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */ }
+
+/**
+ * Remove the default vertical scrollbar in IE.
+ */
+textarea {
+  overflow: auto; }
+
+/**
+ * 1. Add the correct box sizing in IE 10-.
+ * 2. Remove the padding in IE 10-.
+ */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto; }
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */ }
+
+/**
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none; }
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */ }
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
+ */
+details,
+menu {
+  display: block; }
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item; }
+
+/* Scripting
+   ========================================================================== */
+/**
+ * Add the correct display in IE 9-.
+ */
+canvas {
+  display: inline-block; }
+
+/**
+ * Add the correct display in IE.
+ */
+template {
+  display: none; }
+
+/* Hidden
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10-.
+ */
+[hidden] {
+  display: none; }
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer; }
+
 body {
-  width: 100%; }
+  font-family: arial;
+  margin: 0; }
+
+#headband {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #103084;
+  color: white;
+  height: 8vh;
+  padding-left: 15px;
+  padding-right: 15px; }
+  #headband p {
+    margin: 0;
+    font-size: 9px; }
+  #headband img {
+    border: solid #284591;
+    border-radius: 50%;
+    padding: 7px; }
 
 header {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  height: 6vh; }
+  header #burgerbutton {
+    display: none; }
+  header div {
+    display: flex;
+    align-self: center;
+    flex-direction: column; }
+    header div :first-child {
+      display: none; }
+    header div .year {
+      font-size: 35px;
+      font-weight: bold; }
+
+main {
+  height: calc(100vh - ( 8vh + 6vh ) ); }
+  main section nav {
+    display: none; }
+    main section nav ul {
+      margin: 0;
+      list-style-type: none;
+      color: #FFF;
+      margin-left: 4vw;
+      font-weight: bold;
+      font-size: 41px; }
+  main section .polygonbox {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center; }
+    main section .polygonbox svg {
+      transform: rotate(90deg); }
+  main section .polygon1 {
+    transform: translate(0%, 9%); }
+    main section .polygon1:hover path {
+      fill-opacity: 1;
+      fill: #f4887e; }
+  main section .polygon2 {
+    transform: translate(-14%, 52%); }
+    main section .polygon2:hover path {
+      fill-opacity: 1;
+      fill: #98c67f; }
+  main section .polygon3 {
+    transform: translate(0%, -5%); }
+    main section .polygon3:hover path {
+      fill-opacity: 1;
+      fill: #5a8fa6; }
+  main section .polygon4 {
+    transform: translate(-14%, 38%); }
+    main section .polygon4:hover path {
+      fill-opacity: 1;
+      fill: #fcc04b; }
+  main section .polygon5:hover path {
+    fill-opacity: 1;
+    fill: #a69d57; }
+  main section .polygon6:hover path {
+    fill-opacity: 1;
+    fill: #98c67f; }
+  main section .polygon7:hover path {
+    fill-opacity: 1;
+    fill: #e79655; }
+
+.polygons {
+  z-index: 1;
+  width: 42%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .polygons div {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 10px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    width: 70%;
+    z-index: 1; }
+    .polygons div img {
+      width: 20px;
+      align-self: center;
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0s, opacity 0.2s linear; }
+  .polygons:hover img {
+    visibility: visible;
+    opacity: 1; }
+  .polygons path {
+    stroke: white;
+    stroke-width: 2.031px;
+    stroke-linecap: butt;
+    stroke-linejoin: miter;
+    fill-opacity: 0.251;
+    fill: #292929;
+    transition: 0.3s; }
+
+.hide_on_desktop {
+  display: none; }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%; }
+
+#mobilefooter {
+  background-color: black;
+  width: 43px; }
+
+#basicfooter {
+  color: white; }
+
+.middlepart, .rightpart {
+  opacity: 0.6; }
+
+.leftpart {
+  background-color: #232321;
+  padding: 15px; }
+  .leftpart img {
+    width: 18px; }
+  .leftpart:nth-child(2) {
+    color: grey; }
+  .leftpart p {
+    margin: 0;
+    text-align: center; }
+
+.middlepart p {
+  align-self: center;
+  margin: 0; }
+.middlepart a {
+  text-decoration: none;
+  color: white; }
+
+.rightpart {
+  margin: 9px; }
+  .rightpart p {
+    margin-bottom: 8px; }
+  .rightpart .socialmedia_icons {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end; }
+    .rightpart .socialmedia_icons img {
+      opacity: 0.6; }
+
+.icons {
+  color: white;
+  text-decoration: none; }
+
+.icons::after {
+  content: " | ";
+  white-space: pre-wrap;
+  color: darkgrey; }
+
+body {
+  background-color: #f8f8f8;
+  margin: 0px;
+  background: none; }
+
+.document {
+  font-family: arial;
+  font-size: 14px;
+  max-width: 700px;
+  margin: auto;
+  background: none; }
+
+h1 {
+  font-size: 40px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding-top: 20px; }
+
+h2 {
+  border-bottom: solid 1px #e79655;
+  font-size: 16px; }
+
+.subcategory__1 .subtitle {
+  margin: 0;
+  margin-left: 5px;
+  margin-right: 5px; }
+.subcategory__1 ul {
+  width: 100%;
+  list-style-type: none;
+  padding-left: 0px;
+  font-size: 14px; }
+.subcategory__1 .download {
+  color: #e79655;
+  border: solid 1px #e79655;
+  display: flex;
+  margin-left: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-right: 10px;
+  background-color: transparent; }
+.subcategory__1 .download p:last-child {
+  margin-left: 5px;
+  font-size: 12px; }
+.subcategory__1 .download svg {
+  margin-right: 5px; }
+
+.drop-menu {
+  padding: 0; }
+  .drop-menu li {
+    background-color: white;
+    margin-bottom: 2px;
+    align-items: center;
+    list-style: none; }
+  .drop-menu .weight {
+    margin-left: auto;
+    margin-right: 10px; }
+  .drop-menu .menu {
+    margin-left: 10px;
+    flex-grow: 1; }
+  .drop-menu label {
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    width: 100%; }
+  .drop-menu .select {
+    position: relative;
+    margin-right: 10px;
+    margin-top: 2px;
+    margin-bottom: 2px; }
+  .drop-menu .polygone, .drop-menu .polygone-drop-down {
+    opacity: 0.39; }
+  .drop-menu .bar {
+    display: none;
+    position: absolute;
+    top: 17.5px;
+    left: 9px; }
+  .drop-menu .arrow {
+    display: none; }
+  .drop-menu .arrow-drop-down {
+    display: none;
+    position: absolute;
+    top: 13px;
+    left: 6px; }
+  .drop-menu .checkbox_toggler:checked .chevron {
+    display: none; }
+  .drop-menu .checkbox_toggler:checked ~ label .polygone {
+    opacity: 1; }
+  .drop-menu .checkbox_toggler:checked ~ label .chevron-down {
+    transform: rotate(90deg); }
+  .drop-menu .checkbox_toggler:checked ~ label .arrow {
+    display: block;
+    position: absolute;
+    top: 13px;
+    left: 6px; }
+  .drop-menu .checkbox_toggler:checked ~ label .sub-menu__arrow {
+    display: block;
+    position: absolute;
+    top: 9px;
+    left: 4.4px; }
+  .drop-menu .checkbox_toggler {
+    display: none; }
+  .drop-menu .sub-menu {
+    display: none;
+    background-color: #f8f8f8; }
+  .drop-menu .sub-menu, .drop-menu .sub-menu ul, .drop-menu .sub-menu li {
+    background-color: #f8f8f8; }
+  .drop-menu .checkbox_toggler:checked ~ .sub-menu {
+    display: block; }
+  .drop-menu .sub-menu__menu {
+    margin: 0px;
+    margin-left: 30px;
+    flex-grow: 1;
+    max-width: 200px; }
+  .drop-menu .sub-menu__weight {
+    margin-top: 0;
+    margin-bottom: 0; }
+
+.chevron {
+  padding-left: 10px; }
+
+.chevron::before {
+  border-style: solid;
+  border-width: 0.25em 0.25em 0 0;
+  border-color: #e79655;
+  content: '';
+  display: inline-block;
+  height: 0.45em;
+  left: 0.15em;
+  position: relative;
+  top: 0.15em;
+  transform: rotate(-45deg);
+  vertical-align: top;
+  width: 0.45em;
+  left: 0;
+  transform: rotate(45deg); }
+
+.chevron.bottom:before {
+  top: 0;
+  transform: rotate(135deg); }
+
+.subcategory__2 .ad {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center; }
+  .subcategory__2 .ad figure {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center; }
+  .subcategory__2 .ad figcaption {
+    width: 180px; }
+  .subcategory__2 .ad figcaption p:first-child {
+    color: #e79655;
+    margin: 0; }
+  .subcategory__2 .ad figcaption p:nth-child(2) {
+    margin: 0;
+    margin-top: 5px;
+    margin-bottom: 5px; }
+.subcategory__2 img {
+  margin: auto; }
+
+.subcategory__3 .drop-menu__content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  vertical-align: middle; }
+
+.button_dl {
+  background-color: transparent;
+  border: 0;
+  padding: 0px;
+  text-align: left;
+  font-size: 14px;
+  text-decoration: none;
+  color: black; }
+
+button, label {
+  cursor: pointer; }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 6vh;
+  background-color: white; }
   header img {
     max-height: 30px;
-    max-width: 300px; }
-  header div :first-child {
-    white-space: pre-line; }
-  header div .year {
-    font-size: 35px;
-    font-weight: bold; }
-
-section picture img {
-  position: absolute;
-  z-index: 0;
-  width: 100%; }
-section .polygonbox {
-  display: flex;
-  flex-wrap: wrap; }
-section .polygons {
-  z-index: 1; }
-
-.show_on_mobile {
-  display: none; }
+    max-width: 300px;
+    align-self: center; }
+  header button {
+    background: none;
+    border: none; }
+  header div {
+    align-self: center; }
+    header div :first-child {
+      white-space: pre-line; }
+    header div .year {
+      font-size: 35px;
+      font-weight: bold; }
 
 @media screen and (max-width: 600px) {
   .show_on_mobile {
-    display: block; } }
-@media screen and (max-width: 600px) {
-  .hide_on_mobile {
+    display: block; }
+
+  .show_on_desktop {
     display: none; } }
+@media screen and (min-width: 600px) {
+  .show_on_mobile {
+    display: none; }
+
+  .show_on_desktop {
+    display: block; } }
+@media screen and (max-width: 700px) {
+  header {
+    padding-top: 5px; }
+
+  h1 {
+    padding-left: 5px; }
+
+  h2 {
+    padding-left: 5px; } }
+@media screen and (max-width: 600px) {
+  main {
+    background: url("../images/image_home_mobile.png");
+    background-size: cover;
+    background-repeat: no-repeat; }
+
+  .hide_on_mobile {
+    display: none; }
+
+  .hide_on_desktop {
+    display: flex; }
+
+  .polygonbox {
+    justify-content: center; }
+
+  footer {
+    width: auto; }
+    footer .leftpart {
+      background-color: #000;
+      padding: 10px; }
+      footer .leftpart img {
+        width: 25px; }
+    footer p, footer .middlepart, footer .rightpart {
+      display: none; } }
+@media screen and (min-width: 600px) {
+  header #burgerbutton {
+    display: block;
+    max-height: 30px;
+    max-width: 300px;
+    align-self: center; }
+  header div :first-child {
+    display: block; }
+
+  #headband p {
+    font-size: 20px; }
+
+  main section nav {
+    display: block; }
+    main section nav ul {
+      margin: 0;
+      list-style-type: none;
+      color: #FFF;
+      margin-left: 4vw;
+      font-weight: bold;
+      font-size: 41px; } }
+@media screen and (max-width: 900px) {
+  .hide_on_mobile_and_tablets {
+    display: none; }
+
+  .polygonbox {
+    max-width: 57vh;
+    margin-left: auto;
+    margin-right: auto; }
+
+  .polygons {
+    max-width: 300px; } }
+@media screen and (min-width: 601px) {
+  header img {
+    margin-left: 26px; }
+
+  main {
+    background: url("../images/image_home_large.jpg");
+    background-size: cover;
+    background-repeat: no-repeat; }
+
+  #basicfooter {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end; } }
+@media screen and (min-width: 901px) {
+  main section .polygonbox svg {
+    transform: rotate(0); }
+
+  .polygonbox {
+    margin-top: 3vw; }
+
+  .polygons {
+    transform: translate(0%, 0%) !important; }
+
+  .hide_on_mobile_and_tablets {
+    display: flex;
+    transform: translate(50%, -25%) !important; }
+
+  .polygon2 {
+    display: none; } }
+@media screen and (min-width: 901px) and (max-width: 1200px) {
+  .polygonbox {
+    max-width: 90%;
+    justify-content: center; }
+
+  .polygons {
+    width: 26%; } }
+@media screen and (min-width: 1200px) {
+  .polygonbox {
+    max-width: 808px;
+    margin-left: auto;
+    margin-right: auto; }
+
+  .polygons {
+    max-width: 243px; } }
 
 /*# sourceMappingURL=global.css.map */
