--- a/assets/scss/document.scss
+++ b/assets/scss/document.scss
@@ -1,6 +1,7 @@
 body{
   background-color: rgb(248, 248, 248);
   margin: 0px;
+  background:none;
 }
 
 .document{
@@ -8,6 +9,7 @@ body{
   font-size: 14px;
   max-width: 700px;
   margin: auto;
+  background: none;
 }
 
 h1{
