--- a/assets/scss/document.scss
+++ b/assets/scss/document.scss
@@ -24,43 +24,47 @@ h2{
 }
 
 //HEADER
-$headerHeight: 6vh;
-header {
-  display: flex;
-  justify-content: space-between;
-  height: $headerHeight;
-  background-color: white;
+// $headerHeight: 60px;
+// header {
+//   display: flex;
+//   justify-content: space-between;
+//   height: $headerHeight;
+//   background-color: white;
+//
+//   a{
+//     margin-top: auto;
+//     margin-bottom: auto;
+//   }
+//
+//   a img {
+//     max-height: 30px;
+//     max-width: 300px;
+//     align-self: center;
+//   }
+//
+//   button {
+//     background:none;
+//     border:none;
+//   }
+//
+//   div {
+//     align-self: center;
+//     :first-child {
+//       white-space:pre-line;
+//     }
+//
+//     .year {
+//       font-size: 35px;
+//       font-weight: bold;
+//       color: rgb(231, 150, 85);
+//     }
+//   }
+// }
 
-  a{
-    margin-top: auto;
-    margin-bottom: auto;
-  }
+header div span .year {
 
-  a img {
-    max-height: 30px;
-    max-width: 300px;
-    align-self: center;
-  }
-
-  button {
-    background:none;
-    border:none;
-  }
-
-  div {
-    align-self: center;
-    :first-child {
-      white-space:pre-line;
-    }
-
-    .year {
-      font-size: 35px;
-      font-weight: bold;
-      color: rgb(231, 150, 85);
-    }
-  }
+    color: rgb(231, 150, 85);
 }
-
 
 //*********//
 //SECTION 1//
