--- a/assets/scss/mediaqueries.scss
+++ b/assets/scss/mediaqueries.scss
@@ -40,7 +40,7 @@
 
         #burgerbutton {
             display:block;
-            max-height: 30px;
+            // max-height: 30px;
             max-width: 300px;
             align-self: center;
 
