--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -395,24 +395,16 @@ body {
     border-radius: 50%;
     padding: 7px; }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  height: 6vh; }
-  header #burgerbutton {
-    display: none; }
-  header div {
-    display: flex;
-    align-self: center;
-    flex-direction: column; }
-    header div :first-child {
-      display: none; }
-    header div .year {
-      font-size: 35px;
-      font-weight: bold; }
+#burgerbutton {
+  display: none; }
+
+header a img {
+  margin-left: 26px; }
+header div :first-child {
+  display: none; }
 
 main {
-  height: calc(100vh - ( 8vh + 6vh ) ); }
+  height: calc(100vh - ( 8vh + 60px ) ); }
   main section nav {
     display: none; }
     main section nav ul {
@@ -574,6 +566,9 @@ h2 {
   border-bottom: solid 1px #e79655;
   font-size: 16px; }
 
+header div span .year {
+  color: #e79655; }
+
 .subcategory__1 .subtitle {
   margin: 0;
   margin-left: 5px;
@@ -640,7 +635,8 @@ h2 {
   .drop-menu .checkbox_toggler:checked ~ label .polygone {
     opacity: 1; }
   .drop-menu .checkbox_toggler:checked ~ label .chevron-down {
-    transform: rotate(90deg); }
+    transform: rotate(90deg);
+    transform-origin: 80% 50%; }
   .drop-menu .checkbox_toggler:checked ~ label .arrow {
     display: block;
     position: absolute;
@@ -682,7 +678,6 @@ h2 {
   left: 0.15em;
   position: relative;
   top: 0.15em;
-  transform: rotate(-45deg);
   vertical-align: top;
   width: 0.45em;
   left: 0;
@@ -691,6 +686,10 @@ h2 {
 .chevron.bottom:before {
   top: 0;
   transform: rotate(135deg); }
+
+.arrow-down {
+  transform: rotate(90deg);
+  transform-origin: 80% 50%; }
 
 .subcategory__2 .ad {
   display: flex;
@@ -732,38 +731,26 @@ h2 {
 button, label {
   cursor: pointer; }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  height: 6vh;
-  background-color: white; }
-  header img {
-    max-height: 30px;
-    max-width: 300px;
-    align-self: center; }
-  header button {
-    background: none;
-    border: none; }
-  header div {
-    align-self: center; }
-    header div :first-child {
-      white-space: pre-line; }
-    header div .year {
-      font-size: 35px;
-      font-weight: bold; }
-
 @media screen and (max-width: 600px) {
   .show_on_mobile {
     display: block; }
 
   .show_on_desktop {
-    display: none; } }
+    display: none; }
+
+  header div {
+    margin-right: 5px; } }
 @media screen and (min-width: 600px) {
   .show_on_mobile {
     display: none; }
 
   .show_on_desktop {
-    display: block; } }
+    display: block; }
+
+  header img {
+    margin-left: 10px; }
+  header div {
+    margin: 5px; } }
 @media screen and (max-width: 700px) {
   header {
     padding-top: 5px; }
@@ -800,7 +787,6 @@ header {
 @media screen and (min-width: 600px) {
   header #burgerbutton {
     display: block;
-    max-height: 30px;
     max-width: 300px;
     align-self: center; }
   header div :first-child {
@@ -873,5 +859,29 @@ header {
 
   .polygons {
     max-width: 243px; } }
+header {
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  background-color: white; }
+  header a {
+    margin-top: auto;
+    margin-bottom: auto; }
+  header a img {
+    max-height: 30px;
+    max-width: 300px;
+    align-self: center; }
+  header button {
+    background: none;
+    border: none; }
+  header div {
+    align-self: center; }
+    header div :first-child {
+      white-space: pre-line; }
+    header div .year {
+      font-size: 35px;
+      font-weight: bold; }
+    header div #orangeyear {
+      color: #e79655; }
 
 /*# sourceMappingURL=global.css.map */
