--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,7 +2,7 @@
 // https://specificity.keegan.st/
 
 $headbandHeight: 8vh;
-$headerHeight: 6vh;
+$headerHeight: 60px;
 
 button {
     background: none;
@@ -15,6 +15,8 @@ body {
     margin: 0;
 
 }
+
+
 
 #headband {
         display: flex;
@@ -38,30 +40,60 @@ body {
         }
     }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    height: $headerHeight;
+#burgerbutton {
+    display:none;
+}
 
-    #burgerbutton {
-        display:none;
+header {
+    a {
+        img {
+            margin-left: 26px,
+        }
     }
 
-    div {
-        display: flex;
-        align-self: center;
-        flex-direction: column;
-
+    div{
         :first-child {
             display:none;
         }
-
-        .year {
-            font-size: 35px;
-            font-weight: bold;
-        }
     }
 }
+// header {
+//     display: flex;
+//     justify-content: space-between;
+//     height: $headerHeight;
+//
+//     a {
+//         img {
+//             margin-left:26px;
+//         }
+//     }
+//
+//     #burgerbutton {
+//         display:none;
+//     }
+//
+//     div {
+//         display: flex;
+//         align-self: center;
+//         flex-direction: column;
+//
+//         :first-child {
+//             display:none;
+//         }
+//
+//         .year {
+//             font-size: 35px;
+//             font-weight: bold;
+//
+//         }
+//
+//         #blackyear {
+//             color:black;
+//         }
+//     }
+// }
+
+
 
 main {
     // background-url fixed in meadia query
